--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ permalink: /404.html
 
 <h1>404: Page not found</h1>
   <p>
-    If you typed the URL directly, check your spelling and capitalization. Our URLs look like this: <strong>https://guides.18f.gov/agile/introduction/.</strong>
+    If you typed the URL directly, check your spelling and capitalization. Our URLs look like this: <strong>https://18f-guides.netlify.app/agile/introduction/.</strong>
   </p>
   <p>
     Visit our homepage for helpful tools and resources, or contact us and we’ll point you in the right direction.
